# tspikes

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README  configure.ac
debian/: changelog  control  control~  copyright  dirs  menu.ex  postinst  postinst.ex  postinst.old  postrm  postrm.old  rules  tspikes.install.old
doc/: ratetimeline.txt  somanetcodec.txt  spikewaverenderer.txt  spikewaveview.txt  spvectdb.txt  todo.txt  tspikewin.txt
src/: CMakeLists.txt  Makefile  Makefile.am  README  cariooverlay.txt  cluserview.txt  cluster.frag  cluster.vert  clusterrenderer.cc  clusterrenderer.h  clusterrenderer.txt  clusterview.cc  clusterview.h  clusterviewcontroller.cc  clusterviewcontroller.h  combosetting.cc  combosetting.h  config.h.in  design.txt  fakedata.cc  fakedata.h  fakettdata.cc  fakettdata.h  filtercombosetting.cc  filtercombosetting.h  gaincombosetting.cc  gaincombosetting.h  glspikes.cc  glspikes.h  glstring.cc  glstring.frag  glstring.h  glstring.vert  hpfchecksetting.cc  hpfchecksetting.h  notes.txt  ratetimeline.cc  ratetimeline.h  ratetimelinerenderer.cc  ratetimelinerenderer.h  (+40 more)
src/cairogltext/: glstring.cc  glstring.h  glstring.txt
src/ext-common/cairogltext/: glstring.cc  glstring.h  glstring.vert  shaderprogs.h
src/ext-common/shaderutil/: shaders.cc  shaders.h
src/old/: ClusterDisplay.cc  ClusterDisplay.h  FrameCache.cc  FrameCache.h  Spike.h  SpikeHistory.cc  SpikeHistory.h  SpikeWindow.cc  SpikeWindow.h  cluster.txt  clusterarea.cc  clusterarea.h  clusterbox.cc  clusterbox.h  clusterrenderer.cc  clusterrenderer.h  clusterrenderer_test.cc  clusterview.cc  clusterview.h  clusterview_test.cc  design.txt  framestuff.txt  share-lists.cc  spikebench.cc  spikepoint.cc  spikepoint.h  spikes.cc  spikes.h  test.cc  test2.cc  testwin.cc  timeview.h  udptest.cc
src/tests/: Makefile  glspikes.h  singlecluster.cc  singlecluster.h  singlecluster_main.cc  spikes.h  spikevis.cc  testspikes.cc  testspikes.h  ttreader.cc  ttreader.h  vistest.cc
tests/: CMakeLists.txt  spvectdb_test.cc  util_test.cc
