## Makefile.am -- Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

AM_CXXFLAGS = $(BOOST_CPPFLAGS) $(BOOST_THREAD_CPPFLAGS) $(BOOST_FORMAT_CPPFLAGS)  -pthread 
AM_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_THREAD_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) 

LIBS=$(BOOST_THREAD_LIBS) 
